--- a/app/src/main/res/layout/activity_linear_percent_activity.xml
+++ b/app/src/main/res/layout/activity_linear_percent_activity.xml
@@ -25,12 +25,14 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:id="@+id/btnB"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:background="@drawable/shape_btn_b"/>
 
     <Button
         android:text="@string/btnC"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:id="@+id/btnC"
-        android:layout_weight="2"/>
+        android:layout_weight="2"
+        android:background="@drawable/shape_btn_c"/>
 </LinearLayout>
